objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>CA Amministratori</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Desospeso KO</fullName>
        </values>
        <values>
            <fullName>Desospeso OK</fullName>
        </values>
        <values>
            <fullName>Espletato OK</fullName>
        </values>
        <values>
            <fullName>In Lavorazione</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Realizzazione Impianto Completata</fullName>
        </values>
        <values>
            <fullName>Sospeso KO</fullName>
        </values>
        <values>
            <fullName>Sospeso OK</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>EOF Support Process</fullName>
        <description>Support process for Enel Open Fiber</description>
        <isActive>true</isActive>
        <values>
            <fullName>Accettato</fullName>
        </values>
        <values>
            <fullName>Accettato KO</fullName>
        </values>
        <values>
            <fullName>Acquisito</fullName>
        </values>
        <values>
            <fullName>Acquisito KO</fullName>
        </values>
        <values>
            <fullName>Annullato</fullName>
        </values>
        <values>
            <fullName>Cessato</fullName>
        </values>
        <values>
            <fullName>Chiuso</fullName>
        </values>
        <values>
            <fullName>Desospeso KO</fullName>
        </values>
        <values>
            <fullName>Desospeso OK</fullName>
        </values>
        <values>
            <fullName>Espletato</fullName>
        </values>
        <values>
            <fullName>Espletato KO</fullName>
        </values>
        <values>
            <fullName>Espletato OK</fullName>
        </values>
        <values>
            <fullName>In Annullamento</fullName>
        </values>
        <values>
            <fullName>In Lavorazione</fullName>
        </values>
        <values>
            <fullName>Modificato KO</fullName>
        </values>
        <values>
            <fullName>Modificato OK</fullName>
        </values>
        <values>
            <fullName>Ricevuto</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Richiesta Chiusura</fullName>
        </values>
        <values>
            <fullName>Scartato</fullName>
        </values>
        <values>
            <fullName>Sospeso</fullName>
        </values>
        <values>
            <fullName>Sospeso KO</fullName>
        </values>
        <values>
            <fullName>Sospeso OK</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PO_Support_Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Accettato</fullName>
        </values>
        <values>
            <fullName>Annullato</fullName>
        </values>
        <values>
            <fullName>Chiuso KO</fullName>
        </values>
        <values>
            <fullName>Chiuso OK</fullName>
        </values>
        <values>
            <fullName>Completato</fullName>
        </values>
        <values>
            <fullName>Desospeso KO</fullName>
        </values>
        <values>
            <fullName>Desospeso OK</fullName>
        </values>
        <values>
            <fullName>Espletato OK</fullName>
        </values>
        <values>
            <fullName>In Lavorazione</fullName>
        </values>
        <values>
            <fullName>Nuovo</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Sospeso KO</fullName>
        </values>
        <values>
            <fullName>Sospeso OK</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>PO_TP_TicketProvisioning</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Acquisito</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Chiuso</fullName>
        </values>
        <values>
            <fullName>Desospeso KO</fullName>
        </values>
        <values>
            <fullName>Desospeso OK</fullName>
        </values>
        <values>
            <fullName>Espletato OK</fullName>
        </values>
        <values>
            <fullName>In Lavorazione</fullName>
        </values>
        <values>
            <fullName>Sospeso KO</fullName>
        </values>
        <values>
            <fullName>Sospeso OK</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SN - Social Support Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Chiuso</fullName>
        </values>
        <values>
            <fullName>Desospeso KO</fullName>
        </values>
        <values>
            <fullName>Desospeso OK</fullName>
        </values>
        <values>
            <fullName>Espletato OK</fullName>
        </values>
        <values>
            <fullName>In Lavorazione</fullName>
        </values>
        <values>
            <fullName>Inviato</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Sospeso KO</fullName>
        </values>
        <values>
            <fullName>Sospeso OK</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accordo_Operativo__c</fullName>
        <description>L’accordo operativo sarà generato in fase di accettazione, da parte del Cliente, dell’offerta presentata da Vendite. L’Accordo Operativo rappresenta l’identificativo della richiesta di Fattibilità.</description>
        <label>Accordo Operativo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_from_Email__c</fullName>
        <label>Address from Email</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alert__c</fullName>
        <label>Alert</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ApexContext__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ApexContext</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Asset_Verticale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Verticale</label>
        <referenceTo>OF_Asset_Verticale__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_Competence__c</fullName>
        <label>Billing Competence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anticipato</fullName>
                </value>
                <value>
                    <fullName>Posticipato</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_Amministratore__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amministratore</label>
        <referenceTo>CA_Amministratore__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CA_Azienda__c</fullName>
        <label>Azienda</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Caso_assegnato_a__c</fullName>
        <formula>IF( ISBLANK( Owner:Queue.QueueName ) , Owner:User.FirstName + &quot; &quot; + Owner:User.LastName , Owner:Queue.QueueName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Caso assegnato a</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Censimento_Interno_in_Acquisizione__c</fullName>
        <label>CA Censimento Interno in Acquisizione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CA_Censimento__c</fullName>
        <inlineHelpText>Esterno = Censimento esterno effettuato, processo di censimento Interno in corso
Interno = Censimento interno effettuato, processo di richiesta lavori in corso</inlineHelpText>
        <label>Censimento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Interno</fullName>
                </value>
                <value>
                    <fullName>Esterno</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_Citt__c</fullName>
        <label>Città</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Civico__c</fullName>
        <label>Civico</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Codice_Ordine_in_Corso__c</fullName>
        <inlineHelpText>ATTENZIONE: Se questo campo è valorizzato significa che è presente almeno un ordine su questo building</inlineHelpText>
        <label>Codice Ordine in Corso</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Cognome_PM_Impresa__c</fullName>
        <label>Cognome PM Impresa</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Giacenza_Cens_Interno_in_Acquisizione__c</fullName>
        <formula>IF( 
ISBLANK(CA_In_Lavorazione_Ric_Permesso_Lavori__c)&amp;&amp;ISBLANK(CA_Realizzazione_Impianto_in_Corso__c), 
TODAY() - CA_Censimento_Interno_in_Acquisizione__c, 

IF( 
ISBLANK(CA_In_Lavorazione_Ric_Permesso_Lavori__c)&amp;&amp;NOT(ISBLANK(CA_Realizzazione_Impianto_in_Corso__c)), 
CA_Realizzazione_Impianto_in_Corso__c - CA_Censimento_Interno_in_Acquisizione__c, 

IF( 
NOT(ISBLANK(CA_In_Lavorazione_Ric_Permesso_Lavori__c)), 
CA_In_Lavorazione_Ric_Permesso_Lavori__c - CA_Censimento_Interno_in_Acquisizione__c, 
CA_In_Lavorazione_Ric_Permesso_Lavori__c - CA_Censimento_Interno_in_Acquisizione__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giacenza Cens. Interno in Acquisizione</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Giacenza_In_Lav_Richiesta_Lavori__c</fullName>
        <formula>IF( 
ISBLANK(CA_Negoz_Impresa_Richiesta_Lavori__c)&amp;&amp;ISBLANK(CA_Realizzazione_Impianto_in_Corso__c), 
TODAY() - CA_In_Lavorazione_Ric_Permesso_Lavori__c, 

IF( 
ISBLANK(CA_Negoz_Impresa_Richiesta_Lavori__c)&amp;&amp;NOT(ISBLANK(CA_Realizzazione_Impianto_in_Corso__c)), 
CA_Realizzazione_Impianto_in_Corso__c - CA_In_Lavorazione_Ric_Permesso_Lavori__c, 

IF( 
NOT(ISBLANK(CA_Negoz_Impresa_Richiesta_Lavori__c)), 
CA_Negoz_Impresa_Richiesta_Lavori__c - CA_In_Lavorazione_Ric_Permesso_Lavori__c, 
CA_Negoz_Impresa_Richiesta_Lavori__c - CA_In_Lavorazione_Ric_Permesso_Lavori__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giacenza In Lav - Richiesta Lavori</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Giacenza_In_Lavorazione_Esterno__c</fullName>
        <formula>IF(
				ISBLANK(CA_Negoz_Impresa_Accesso_Cens_Intern__c)&amp;&amp;ISBLANK(CA_Censimento_Interno_in_Acquisizione__c),
				TODAY() -  CA_In_Lavorazione_Esterno__c,
				
				IF(
								ISBLANK(CA_Negoz_Impresa_Accesso_Cens_Intern__c)&amp;&amp;NOT(ISBLANK(CA_Censimento_Interno_in_Acquisizione__c)), 
																CA_Censimento_Interno_in_Acquisizione__c - CA_In_Lavorazione_Esterno__c,
																
				IF(
								NOT(ISBLANK(CA_Negoz_Impresa_Accesso_Cens_Intern__c)),
								CA_Negoz_Impresa_Accesso_Cens_Intern__c - CA_In_Lavorazione_Esterno__c,
				    CA_Negoz_Impresa_Accesso_Cens_Intern__c - CA_In_Lavorazione_Esterno__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giacenza In Lavorazione - Esterno</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Giacenza_Negoz_Impresa_Accesso_Cens__c</fullName>
        <formula>IF( 
ISBLANK(CA_Negoz_OF_Accesso_Cens_Interno__c)&amp;&amp;ISBLANK(CA_Censimento_Interno_in_Acquisizione__c), 
TODAY() - CA_Negoz_Impresa_Accesso_Cens_Intern__c, 

IF( 
ISBLANK(CA_Negoz_OF_Accesso_Cens_Interno__c)&amp;&amp;NOT(ISBLANK(CA_Censimento_Interno_in_Acquisizione__c)), 
CA_Censimento_Interno_in_Acquisizione__c - CA_Negoz_Impresa_Accesso_Cens_Intern__c, 

IF( 
NOT(ISBLANK(CA_Negoz_OF_Accesso_Cens_Interno__c)), 
CA_Negoz_OF_Accesso_Cens_Interno__c - CA_Negoz_Impresa_Accesso_Cens_Intern__c, 
CA_Negoz_OF_Accesso_Cens_Interno__c - CA_Negoz_Impresa_Accesso_Cens_Intern__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giacenza Negoz. Impresa Accesso Cens.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Giacenza_Negoz_Impresa_Richiesta_Lav__c</fullName>
        <formula>IF( 
ISBLANK(CA_Negoz_OF_Richiesta_Lavori__c)&amp;&amp;ISBLANK(CA_Realizzazione_Impianto_in_Corso__c), 
 TODAY() - CA_Negoz_Impresa_Richiesta_Lavori__c, 

IF( 
ISBLANK(CA_Negoz_OF_Richiesta_Lavori__c)&amp;&amp;NOT(ISBLANK(CA_Realizzazione_Impianto_in_Corso__c)), 
CA_Realizzazione_Impianto_in_Corso__c - CA_Negoz_Impresa_Richiesta_Lavori__c, 

IF( 
NOT(ISBLANK(CA_Negoz_OF_Richiesta_Lavori__c)), 
CA_Negoz_OF_Richiesta_Lavori__c - CA_Negoz_Impresa_Richiesta_Lavori__c, 
CA_Negoz_OF_Richiesta_Lavori__c - CA_Negoz_Impresa_Richiesta_Lavori__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giacenza Negoz. Impresa Richiesta Lavori</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Giacenza_Negoz_OF_Accesso_Censimento__c</fullName>
        <formula>IF( 
ISBLANK(CA_Censimento_Interno_in_Acquisizione__c),TODAY()- CA_Negoz_OF_Accesso_Cens_Interno__c ,
				    CA_Censimento_Interno_in_Acquisizione__c - CA_Negoz_OF_Accesso_Cens_Interno__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giacenza Negoz. OF Accesso Censimento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Giacenza_Negoz_OF_Richiesta_Lavori__c</fullName>
        <formula>IF( 
ISBLANK(CA_Realizzazione_Impianto_in_Corso__c),TODAY()- CA_Negoz_OF_Richiesta_Lavori__c , 
CA_Realizzazione_Impianto_in_Corso__c - CA_Negoz_OF_Richiesta_Lavori__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giacenza Negoz OF Richiesta Lavori</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Giacenza_Realizz_Impianto_in_Corso__c</fullName>
        <formula>IF( 
  ISBLANK(ClosedDate),TODAY()- CA_Realizzazione_Impianto_in_Corso__c , 
  DATEVALUE(ClosedDate) - CA_Realizzazione_Impianto_in_Corso__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Giacenza Realizz. Impianto in Corso</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_ID_Building_Scala__c</fullName>
        <externalId>true</externalId>
        <label>ID_Building/Scala</label>
        <length>70</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CA_ID_Building__c</fullName>
        <label>ID Building</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_In_Lavorazione_Esterno__c</fullName>
        <label>CA In Lavorazione Esterno</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CA_In_Lavorazione_Ric_Permesso_Lavori__c</fullName>
        <label>CA In Lavorazione Ric. Permesso Lavori</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CA_Lavori_Civili_Interni__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Spuntare questa casella se è necessario effettuare lavori civili interni</inlineHelpText>
        <label>Lavori Civili Interni</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CA_Negoz_Impresa_Accesso_Cens_Intern__c</fullName>
        <label>CA Negoz. Impresa Accesso Cens. Intern</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CA_Negoz_Impresa_Richiesta_Lavori__c</fullName>
        <label>CA Negoz. Impresa Richiesta Lavori</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CA_Negoz_OF_Accesso_Cens_Interno__c</fullName>
        <label>CA Negoz. OF Accesso Cens. Interno</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CA_Negoz_OF_Richiesta_Lavori__c</fullName>
        <label>CA Negoz. OF Richiesta Lavori</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CA_Nome_PM_Impresa__c</fullName>
        <label>Nome PM Impresa</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Note_Censimento__c</fullName>
        <label>Note Censimento</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CA_Numero_Ordini_in_Corso__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Numero Ordini in Corso</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Numero_UI_business__c</fullName>
        <label>Numero UI business</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Numero_UI_residenziali__c</fullName>
        <label>Numero UI residenziali</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Pfs__c</fullName>
        <description>PFS da PNI</description>
        <label>Pfs</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Realizzazione_Impianto_in_Corso__c</fullName>
        <label>CA Realizzazione Impianto in Corso</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CA_Scala__c</fullName>
        <label>Scala</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Somma_numero_UI__c</fullName>
        <formula>VALUE(CA_Numero_UI_business__c) + VALUE(CA_Numero_UI_residenziali__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Somma numero UI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Stato_Ordine_in_Corso__c</fullName>
        <label>Stato Ordine in Corso</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CA_Tempo_di_attraversamento__c</fullName>
        <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tempo di attraversamento</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Tempo_fase__c</fullName>
        <formula>TODAY() - CA_Ultima_modifica_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tempo fase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CA_Ultima_modifica_Status__c</fullName>
        <label>CA Ultima modifica Status</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CA_Via__c</fullName>
        <label>Via</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_Month_Year__c</fullName>
        <description>This field show only year and month of the createdDate. It is used just by GICT for PMO purposes. It should be viewed only for administrators and dataloader. It shouldn&apos;t appear on GUI.</description>
        <formula>IF ( DATEVALUE(CreatedDate) &gt;= 
DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) 
+ 
( 
14- 
CASE( MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),3,1) - DATE (1900,1,7),7)) 
) 
&amp;&amp; 
DATEVALUE(CreatedDate) &lt; 
DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) 
+ 
( 
7- 
CASE( MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(CreatedDate)),11,1) - DATE (1900,1,7),7)) 
), 
LEFT ( TEXT (CreatedDate+ 2/24 ), 7), 
LEFT ( TEXT (CreatedDate+ 1/24), 7) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CD Month Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_IAV__c</fullName>
        <label>Code IAV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Ordine_EOF__c</fullName>
        <formula>if(AND(NOT(EOF_Order_Manager__c),OR( RecordType.DeveloperName = &apos;EOF Caso - Attivazione&apos;,RecordType.DeveloperName = &apos;EOF Caso - Cessazione&apos;)),  Id, CASESAFEID(Id))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codice Ordine EOF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Ordine_SFDC__c</fullName>
        <label>Codice Ordine SFDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Ordine_SO__c</fullName>
        <label>Codice Ordine SO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAC_Prevista_OF__c</fullName>
        <label>DAC Prevista OF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DATA_ORA_CREAZIONE_TT__c</fullName>
        <label>DATA ORA CREAZIONE TT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Ora_Autoripristinato__c</fullName>
        <label>Data/Ora Autoripristinato</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DataInvio</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description_from_email__c</fullName>
        <label>Description from email</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Descrizione_IAV__c</fullName>
        <label>Descrizione IAV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Durata_Evento__c</fullName>
        <label>Durata Evento (mesi)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOF_Account_OLO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OLO</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>OLO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EOF_Apparato__c</fullName>
        <label>Apparato</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Async_Check_ctrl__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Async Check ctrl</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOF_Categoria_Guasto__c</fullName>
        <description>Codice del guasto</description>
        <inlineHelpText>Codice del guasto</inlineHelpText>
        <label>Categoria Guasto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>Disservizio</fullName>
                </value>
                <value>
                    <fullName>Degrado</fullName>
                </value>
                <value>
                    <fullName>Post Provisioning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Causale_Apertura__c</fullName>
        <label>Causale Apertura</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>Connessione instabile</fullName>
                </value>
                <value>
                    <fullName>Lentezza di navigazione</fullName>
                </value>
                <value>
                    <fullName>Mai Navigato</fullName>
                </value>
                <value>
                    <fullName>Connettività non disponibile</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <isActive>false</isActive>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <isActive>false</isActive>
                    <label>3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Causale_Desospensione__c</fullName>
        <label>Causale Desospensione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>Cliente Irreperibile</fullName>
                </value>
                <value>
                    <fullName>Cliente Indisponibile</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                    <isActive>false</isActive>
                    <label>2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Causale_Errore__c</fullName>
        <label>Causale Errore</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Causale_RIchiesta_Sospensione__c</fullName>
        <label>Causale Richiesta Sospensione</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Causale_Richiesta_Annullamento__c</fullName>
        <label>Causale Richiesta Annullamento</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Causale_Sospensione__c</fullName>
        <label>Causale Sospensione</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a</fullName>
                    <label>1</label>
                </value>
                <value>
                    <fullName>Sede OLO/CLIENTE FINALE inaccessibile</fullName>
                </value>
                <value>
                    <fullName>Cliente Irreperibile</fullName>
                </value>
                <value>
                    <fullName>Cliente Indisponibile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_ClosedDate_FORMULA__c</fullName>
        <formula>IF ( DATEVALUE(ClosedDate) &gt;= 
DATE ( YEAR (DATEVALUE(ClosedDate)),3,1) 
+ 
( 
14- 
CASE( MOD(DATE ( YEAR (DATEVALUE(ClosedDate)),3,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(ClosedDate)),3,1) - DATE (1900,1,7),7)) 
) 
&amp;&amp; 
DATEVALUE(ClosedDate) &lt; 
DATE ( YEAR (DATEVALUE(ClosedDate)),11,1) 
+ 
( 
7- 
CASE( MOD(DATE ( YEAR (DATEVALUE(ClosedDate)),11,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE(ClosedDate)),11,1) - DATE (1900,1,7),7)) 
), 
LEFT ( TEXT (ClosedDate+ 2/24 ), 19), 
LEFT ( TEXT (ClosedDate+ 1/24), 19) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ClosedDate FORMULA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Comunicazione_OLO__c</fullName>
        <externalId>true</externalId>
        <label>Codice Comunicazione OLO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Errore__c</fullName>
        <label>Codice Errore</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Operatore_WS__c</fullName>
        <label>Codice Operatore</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VF</fullName>
                </value>
                <value>
                    <fullName>WN</fullName>
                </value>
                <value>
                    <fullName>TIS</fullName>
                </value>
                <value>
                    <fullName>GOI</fullName>
                </value>
                <value>
                    <fullName>CNN</fullName>
                </value>
                <value>
                    <fullName>BBB</fullName>
                </value>
                <value>
                    <fullName>FAS</fullName>
                </value>
                <value>
                    <fullName>PLA</fullName>
                </value>
                <value>
                    <fullName>CWN</fullName>
                </value>
                <value>
                    <fullName>4IS</fullName>
                </value>
                <value>
                    <fullName>XMA</fullName>
                </value>
                <value>
                    <fullName>WAR</fullName>
                </value>
                <value>
                    <fullName>UND</fullName>
                </value>
                <value>
                    <fullName>SPE</fullName>
                </value>
                <value>
                    <fullName>UMB</fullName>
                </value>
                <value>
                    <fullName>NEX</fullName>
                </value>
                <value>
                    <fullName>NOI</fullName>
                </value>
                <value>
                    <fullName>RAF</fullName>
                </value>
                <value>
                    <fullName>PAN</fullName>
                </value>
                <value>
                    <fullName>SHS</fullName>
                </value>
                <value>
                    <fullName>ALT</fullName>
                </value>
                <value>
                    <fullName>SIR</fullName>
                </value>
                <value>
                    <fullName>HAL</fullName>
                </value>
                <value>
                    <fullName>BRI</fullName>
                </value>
                <value>
                    <fullName>LAW</fullName>
                </value>
                <value>
                    <fullName>ACA</fullName>
                </value>
                <value>
                    <fullName>FST</fullName>
                </value>
                <value>
                    <fullName>INT</fullName>
                </value>
                <value>
                    <fullName>UNC</fullName>
                </value>
                <value>
                    <fullName>SAI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EOF_Codice_Ordine_OLO__c</fullName>
        <externalId>true</externalId>
        <label>Codice Ordine OLO</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EOF_Codice_Ordine_OM__c</fullName>
        <label>Codice Ordine OM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Richiesta_Annullamento__c</fullName>
        <label>Codice Richiesta Annullamento</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Codice_Richiesta_Sospensione__c</fullName>
        <label>Codice Richiesta Sospensione</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Collaudi_Negativi__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Collaudi Negativi</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EOF_Collegamento_P2P__c</fullName>
        <label>Collegamento P2P</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOF_Comune_WS__c</fullName>
        <label>Comune</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>